# bw-backend-template

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
project/: settings.py  urls.py
project/settings/: base.py  dev.py  prod.py
user/: models.py
user/migrations/: 0001_initial.py
