[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Lucas Miguel <lucasmiguelmac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2"
pytest = "^6.2.5"
strawberry-graphql = {extras = ["debug-server"], version = "^0.95.0"}
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
